syntax = "proto3";

option go_package =  "github.com/SwanHtetAungPhyo/service-one/auth/proto";
message  UserExistenceReq {
 string UserId = 1;
}

message  UserExistenceResp {
 bool  status = 1;
}


service  UserRpcMethod{
 rpc  UserExistenceCall(UserExistenceReq) returns (UserExistenceResp);
}